<resources>
    <string name="app_name">NoteReminder</string>
    <string name="note_fragment">Note</string>
    <string name="reminder_fragment">Reminder</string>
    <string name="menu_new_note">New note</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_exit">Exit</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="save_btn">Save</string>
    <string name="app_version">v 1.0</string>
    <string name="ok_btn">OK</string>
    <string name="created_by">Created by Nikitin N.</string>
    <string name="menu_developer">About</string>
    <string name="to_time">Deadline: </string>
    <string name="delete_all_notes">Delete all notes</string>
    <string name="delete_all_reminders">Delete all reminders</string>
    <string name="delete_data">Data</string>
    <string name="set_as_reminder">Set as reminder</string>
    <string name="change_time_reminder">Change the reminder time</string>
    <string name="back_pressed">Please click BACK again to exit</string>
    <string name="note_not_created">Note not created</string>
    <string name="cancel_btn">Cancel</string>
    <string name="notification_settings">Notification</string>
    <string name="set_vibrate">Vibrate</string>
    <string name="set_sound">Sound</string>
    <string name="cancel_alarm_btn">Cancel the remidner</string>
    <string name="additional_settings">Additional</string>
    <string name="foto_settings">Take photo for note</string>
    <string name="no_camera">Your device doesn\'t have camera</string>
</resources>
