<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/title"
        android:textSize="20sp"
        style="?android:listSeparatorTextViewStyle"/>

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_below="@id/titleTextView"/>

    <TextView
        android:id="@+id/descriptTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_below="@id/titleEditText"
        android:text="@string/description"
        android:textSize="20sp"
        style="?android:listSeparatorTextViewStyle"/>

    <EditText
        android:id="@+id/descriptEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_below="@id/descriptTextView"/>

    <TextView
        android:id="@+id/timeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/descriptEditText"
        android:textSize="20sp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:gravity="center"/>

    <Button
        android:id="@+id/setAlarmBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/timeTextView"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/set_as_reminder"
        style="@style/RobotoButtonStyle"
        />

    <Button
        android:id="@+id/saveNoteBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_alignParentBottom="true"
        android:text="@string/save_btn"
        style="@style/RobotoButtonStyle"
        />

</RelativeLayout>